Extract schema from .avro file, zipinfo, head FILE, PermGen space Gradle error, add jar from hdfs in Hive, Cmd + F3 show desktop